Added a new chapter

--- a/XGBoost-Basics.ipynb
+++ b/XGBoost-Basics.ipynb
@@ -128,6 +128,13 @@
     "### XGBoost stands for eXtreme Gradient Boosting.\n",
     "### The name xgboost, though, actually refers to the engineering goal to push the limit of computations resources for boosted tree algorithms. Which is the reason why many people use xgboost."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Develop Your First XGBoost Model in Python with scikit-learn"
+   ]
   }
  ],
  "metadata": {
