--- a/XGBoost-Basics.ipynb
+++ b/XGBoost-Basics.ipynb
@@ -135,11 +135,72 @@
    "source": [
     "## Develop Your First XGBoost Model in Python with scikit-learn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 72.83%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# First XGBoost model for Pima Indians dataset\n",
+    "from numpy import loadtxt\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "# load data\n",
+    "dataset = loadtxt('data/diabetes.csv', delimiter=\",\")\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:8]\n",
+    "Y = dataset[:,8]\n",
+    "# split data into train and test sets\n",
+    "seed = 7\n",
+    "test_size = 0.33\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size,\n",
+    "    random_state=seed)\n",
+    "# fit model on training data\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "# make predictions for test data\n",
+    "predictions = model.predict(X_test)\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation for Gradient Boosting\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
