Added new classifier

--- a/XGBoost-Basics.ipynb
+++ b/XGBoost-Basics.ipynb
@@ -182,6 +182,63 @@
    "source": [
     "## Data Preparation for Gradient Boosting\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
+      "              gamma=None, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=None, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=None, n_jobs=None,\n",
+      "              num_parallel_tree=None, objective='multi:softprob', ...)\n",
+      "Accuracy: 90.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# multiclass classification\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "# load data\n",
+    "data = read_csv('data/iris.csv', header=None)\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:4]\n",
+    "Y = dataset[:,4]\n",
+    "# encode string class values as integers\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(Y)\n",
+    "label_encoded_y = label_encoder.transform(Y)\n",
+    "seed = 7\n",
+    "test_size = 0.33\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, label_encoded_y,\n",
+    "    test_size=test_size, random_state=seed)\n",
+    "# fit model on training data\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "print(model)\n",
+    "# make predictions for test data\n",
+    "predictions = model.predict(X_test)\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
   }
  ],
  "metadata": {
