Added new model

--- a/XGBoost-Basics.ipynb
+++ b/XGBoost-Basics.ipynb
@@ -239,6 +239,111 @@
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: :  (286, 44)\n",
+      "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
+      "              gamma=None, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=None, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=None, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...)\n",
+      "Accuracy: 68.42%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# binary classification, breast cancer dataset, label and one hot encoded\n",
+    "from numpy import column_stack\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "# load data\n",
+    "data = read_csv('data/breast-cancer.csv', header=None) \n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:9]\n",
+    "X = X.astype(str)\n",
+    "Y = dataset[:,9]\n",
+    "# encode string input values as integers\n",
+    "columns = []\n",
+    "for i in range(0, X.shape[1]):\n",
+    "  label_encoder = LabelEncoder()\n",
+    "  feature = label_encoder.fit_transform(X[:,i])\n",
+    "  feature = feature.reshape(X.shape[0], 1)\n",
+    "  onehot_encoder = OneHotEncoder(sparse=False)\n",
+    "  feature = onehot_encoder.fit_transform(feature)\n",
+    "  columns.append(feature)\n",
+    "# collapse columns into array\n",
+    "encoded_x = column_stack(columns)\n",
+    "print(\"X shape: : \", encoded_x.shape)\n",
+    "# encode string class values as integers\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(Y)\n",
+    "label_encoded_y = label_encoder.transform(Y)\n",
+    "# split data into train and test sets\n",
+    "seed = 7\n",
+    "test_size = 0.33\n",
+    "X_train, X_test, y_train, y_test = train_test_split(encoded_x, label_encoded_y,\n",
+    "    test_size=test_size, random_state=seed)\n",
+    "# fit model on training data\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "print(model)\n",
+    "# make predictions for test data\n",
+    "predictions = model.predict(X_test)\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to Evaluate XGBoost Models"
+   ]
   }
  ],
  "metadata": {
