--- a/XGBoost-Advanced.ipynb
+++ b/XGBoost-Advanced.ipynb
@@ -107,6 +107,230 @@
     "plot_importance(model)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection with XGBoost Feature Importance Scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 72.83%\n",
+      "Thresh=0.074, n=8, Accuracy: 72.83%\n",
+      "Thresh=0.085, n=7, Accuracy: 70.87%\n",
+      "Thresh=0.095, n=6, Accuracy: 71.26%\n",
+      "Thresh=0.108, n=5, Accuracy: 68.11%\n",
+      "Thresh=0.112, n=4, Accuracy: 70.87%\n",
+      "Thresh=0.134, n=3, Accuracy: 72.83%\n",
+      "Thresh=0.147, n=2, Accuracy: 71.65%\n",
+      "Thresh=0.244, n=1, Accuracy: 67.32%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import loadtxt\n",
+    "from numpy import sort\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "# load data\n",
+    "dataset = loadtxt('data/diabetes.csv', delimiter=\",\")\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:8]\n",
+    "Y = dataset[:,8]\n",
+    "# split data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=7) # fit model on all training data\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "# make predictions for test data and evaluate\n",
+    "predictions = model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "# Fit model using each importance as a threshold\n",
+    "thresholds = sort(model.feature_importances_)\n",
+    "for thresh in thresholds:\n",
+    "  # select features using threshold\n",
+    "  selection = SelectFromModel(model, threshold=thresh, prefit=True)\n",
+    "  select_X_train = selection.transform(X_train)\n",
+    "  # train model\n",
+    "  selection_model = XGBClassifier()\n",
+    "  selection_model.fit(select_X_train, y_train)\n",
+    "# eval model\n",
+    "  select_X_test = selection.transform(X_test)\n",
+    "  predictions = selection_model.predict(select_X_test)\n",
+    "  accuracy = accuracy_score(y_test, predictions)\n",
+    "  print(\"Thresh=%.3f, n=%d, Accuracy: %.2f%%\" % (thresh, select_X_train.shape[1],\n",
+    "      accuracy*100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monitor Training Performance and Early Stopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\tvalidation_0-error:0.26378\n",
+      "[1]\tvalidation_0-error:0.27165\n",
+      "[2]\tvalidation_0-error:0.24803\n",
+      "[3]\tvalidation_0-error:0.24409\n",
+      "[4]\tvalidation_0-error:0.23622\n",
+      "[5]\tvalidation_0-error:0.20079\n",
+      "[6]\tvalidation_0-error:0.21260\n",
+      "[7]\tvalidation_0-error:0.20472\n",
+      "[8]\tvalidation_0-error:0.21260\n",
+      "[9]\tvalidation_0-error:0.20079\n",
+      "[10]\tvalidation_0-error:0.21654\n",
+      "[11]\tvalidation_0-error:0.20866\n",
+      "[12]\tvalidation_0-error:0.22835\n",
+      "[13]\tvalidation_0-error:0.22835\n",
+      "[14]\tvalidation_0-error:0.22047\n",
+      "[15]\tvalidation_0-error:0.21654\n",
+      "[16]\tvalidation_0-error:0.22441\n",
+      "[17]\tvalidation_0-error:0.22441\n",
+      "[18]\tvalidation_0-error:0.23622\n",
+      "[19]\tvalidation_0-error:0.23622\n",
+      "[20]\tvalidation_0-error:0.23228\n",
+      "[21]\tvalidation_0-error:0.24016\n",
+      "[22]\tvalidation_0-error:0.24409\n",
+      "[23]\tvalidation_0-error:0.24803\n",
+      "[24]\tvalidation_0-error:0.25591\n",
+      "[25]\tvalidation_0-error:0.24803\n",
+      "[26]\tvalidation_0-error:0.24803\n",
+      "[27]\tvalidation_0-error:0.24409\n",
+      "[28]\tvalidation_0-error:0.24803\n",
+      "[29]\tvalidation_0-error:0.24409\n",
+      "[30]\tvalidation_0-error:0.25984\n",
+      "[31]\tvalidation_0-error:0.25197\n",
+      "[32]\tvalidation_0-error:0.24803\n",
+      "[33]\tvalidation_0-error:0.24803\n",
+      "[34]\tvalidation_0-error:0.24803\n",
+      "[35]\tvalidation_0-error:0.24803\n",
+      "[36]\tvalidation_0-error:0.24803\n",
+      "[37]\tvalidation_0-error:0.24409\n",
+      "[38]\tvalidation_0-error:0.24803\n",
+      "[39]\tvalidation_0-error:0.25197\n",
+      "[40]\tvalidation_0-error:0.24803\n",
+      "[41]\tvalidation_0-error:0.25197\n",
+      "[42]\tvalidation_0-error:0.25197\n",
+      "[43]\tvalidation_0-error:0.25197\n",
+      "[44]\tvalidation_0-error:0.26378\n",
+      "[45]\tvalidation_0-error:0.25984\n",
+      "[46]\tvalidation_0-error:0.24409\n",
+      "[47]\tvalidation_0-error:0.25197\n",
+      "[48]\tvalidation_0-error:0.25591\n",
+      "[49]\tvalidation_0-error:0.25984\n",
+      "[50]\tvalidation_0-error:0.25984\n",
+      "[51]\tvalidation_0-error:0.26378\n",
+      "[52]\tvalidation_0-error:0.25984\n",
+      "[53]\tvalidation_0-error:0.25984\n",
+      "[54]\tvalidation_0-error:0.25591\n",
+      "[55]\tvalidation_0-error:0.25591\n",
+      "[56]\tvalidation_0-error:0.26378\n",
+      "[57]\tvalidation_0-error:0.25984\n",
+      "[58]\tvalidation_0-error:0.25197\n",
+      "[59]\tvalidation_0-error:0.25197\n",
+      "[60]\tvalidation_0-error:0.25591\n",
+      "[61]\tvalidation_0-error:0.25591\n",
+      "[62]\tvalidation_0-error:0.25591\n",
+      "[63]\tvalidation_0-error:0.25984\n",
+      "[64]\tvalidation_0-error:0.26378\n",
+      "[65]\tvalidation_0-error:0.25984\n",
+      "[66]\tvalidation_0-error:0.25984\n",
+      "[67]\tvalidation_0-error:0.26772\n",
+      "[68]\tvalidation_0-error:0.26378\n",
+      "[69]\tvalidation_0-error:0.26378\n",
+      "[70]\tvalidation_0-error:0.26378\n",
+      "[71]\tvalidation_0-error:0.26772\n",
+      "[72]\tvalidation_0-error:0.26378\n",
+      "[73]\tvalidation_0-error:0.26378\n",
+      "[74]\tvalidation_0-error:0.27165\n",
+      "[75]\tvalidation_0-error:0.27165\n",
+      "[76]\tvalidation_0-error:0.26378\n",
+      "[77]\tvalidation_0-error:0.26772\n",
+      "[78]\tvalidation_0-error:0.26772\n",
+      "[79]\tvalidation_0-error:0.26378\n",
+      "[80]\tvalidation_0-error:0.26772\n",
+      "[81]\tvalidation_0-error:0.27165\n",
+      "[82]\tvalidation_0-error:0.27165\n",
+      "[83]\tvalidation_0-error:0.26772\n",
+      "[84]\tvalidation_0-error:0.27165\n",
+      "[85]\tvalidation_0-error:0.27165\n",
+      "[86]\tvalidation_0-error:0.26772\n",
+      "[87]\tvalidation_0-error:0.27165\n",
+      "[88]\tvalidation_0-error:0.27165\n",
+      "[89]\tvalidation_0-error:0.27165\n",
+      "[90]\tvalidation_0-error:0.27559\n",
+      "[91]\tvalidation_0-error:0.27165\n",
+      "[92]\tvalidation_0-error:0.27559\n",
+      "[93]\tvalidation_0-error:0.27559\n",
+      "[94]\tvalidation_0-error:0.27165\n",
+      "[95]\tvalidation_0-error:0.26772\n",
+      "[96]\tvalidation_0-error:0.26772\n",
+      "[97]\tvalidation_0-error:0.27165\n",
+      "[98]\tvalidation_0-error:0.27165\n",
+      "[99]\tvalidation_0-error:0.27165\n",
+      "Accuracy: 72.83%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/xgboost/sklearn.py:889: UserWarning: `eval_metric` in `fit` method is deprecated for better compatibility with scikit-learn, use `eval_metric` in constructor or`set_params` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# monitor training performance\n",
+    "from numpy import loadtxt\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "# load data\n",
+    "dataset = loadtxt('data/diabetes.csv', delimiter=\",\")\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:8]\n",
+    "Y = dataset[:,8]\n",
+    "# split data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=7) # fit model on training data\n",
+    "model = XGBClassifier()\n",
+    "eval_set = [(X_test, y_test)]\n",
+    "model.fit(X_train, y_train, eval_metric=\"error\", eval_set=eval_set, verbose=True)\n",
+    "# make predictions for test data\n",
+    "predictions = model.predict(X_test)\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate XGBoost Models With Learning Curves"
+   ]
   }
  ],
  "metadata": {
