Added new models

--- a/XGBoost-Advanced.ipynb
+++ b/XGBoost-Advanced.ipynb
@@ -530,6 +530,166 @@
    "source": [
     "## Early Stopping With XGBoost"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\tvalidation_0-logloss:0.57274\n",
+      "[1]\tvalidation_0-logloss:0.53462\n",
+      "[2]\tvalidation_0-logloss:0.50815\n",
+      "[3]\tvalidation_0-logloss:0.49274\n",
+      "[4]\tvalidation_0-logloss:0.48162\n",
+      "[5]\tvalidation_0-logloss:0.48037\n",
+      "[6]\tvalidation_0-logloss:0.48404\n",
+      "[7]\tvalidation_0-logloss:0.48366\n",
+      "[8]\tvalidation_0-logloss:0.48571\n",
+      "[9]\tvalidation_0-logloss:0.48744\n",
+      "[10]\tvalidation_0-logloss:0.48764\n",
+      "[11]\tvalidation_0-logloss:0.48601\n",
+      "[12]\tvalidation_0-logloss:0.49566\n",
+      "[13]\tvalidation_0-logloss:0.50184\n",
+      "[14]\tvalidation_0-logloss:0.51328\n",
+      "[15]\tvalidation_0-logloss:0.51348\n",
+      "Accuracy: 79.92%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/xgboost/sklearn.py:889: UserWarning: `eval_metric` in `fit` method is deprecated for better compatibility with scikit-learn, use `eval_metric` in constructor or`set_params` instead.\n",
+      "  warnings.warn(\n",
+      "/Users/test/miniforge3/envs/machine-learning-env/lib/python3.8/site-packages/xgboost/sklearn.py:889: UserWarning: `early_stopping_rounds` in `fit` method is deprecated for better compatibility with scikit-learn, use `early_stopping_rounds` in constructor or`set_params` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# early stopping\n",
+    "from numpy import loadtxt\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "# load data\n",
+    "dataset = loadtxt('data/diabetes.csv', delimiter=\",\")\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:8]\n",
+    "Y = dataset[:,8]\n",
+    "# split data into train and test sets\n",
+    "seed = 7\n",
+    "test_size = 0.33\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size,\n",
+    "    random_state=seed)\n",
+    "# fit model on training data\n",
+    "model = XGBClassifier()\n",
+    "eval_set = [(X_test, y_test)]\n",
+    "model.fit(X_train, y_train, early_stopping_rounds=10, eval_metric=\"logloss\",\n",
+    "    eval_set=eval_set, verbose=True)\n",
+    "# make predictions for test data\n",
+    "predictions = model.predict(X_test)\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tune Multithreading Support for XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot # load data\n",
+    "data = read_csv('train.csv') \n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# evaluate the effect of the number of threads\n",
+    "results = []\n",
+    "num_threads = [1, 2, 3, 4]\n",
+    "for n in num_threads:\n",
+    "  start = time()\n",
+    "  model = XGBClassifier(nthread=n)\n",
+    "  model.fit(X, label_encoded_y)\n",
+    "  elapsed = time() - start\n",
+    "  print(n, elapsed)\n",
+    "  results.append(elapsed)\n",
+    "# plot results\n",
+    "pyplot.plot(num_threads, results)\n",
+    "pyplot.ylabel('Speed (seconds)')\n",
+    "pyplot.xlabel('Number of Threads')\n",
+    "pyplot.title('XGBoost Training Speed vs Number of Threads') \n",
+    "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parallelism When Cross Validating XGBoost Mod- els"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Otto, parallel cross validation\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import time\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# prepare cross validation\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "# Single Thread XGBoost, Parallel Thread CV\n",
+    "start = time.time()\n",
+    "model = XGBClassifier(nthread=1)\n",
+    "results = cross_val_score(model, X, label_encoded_y, cv=kfold, scoring='neg_log_loss',\n",
+    "n_jobs=-1)\n",
+    "elapsed = time.time() - start\n",
+    "print(\"Single Thread XGBoost, Parallel Thread CV: %f\" % (elapsed))\n",
+    "# Parallel Thread XGBoost, Single Thread CV\n",
+    "start = time.time()\n",
+    "model = XGBClassifier(nthread=-1)\n",
+    "results = cross_val_score(model, X, label_encoded_y, cv=kfold, scoring='neg_log_loss',\n",
+    "n_jobs=1)\n",
+    "elapsed = time.time() - start\n",
+    "print(\"Parallel Thread XGBoost, Single Thread CV: %f\" % (elapsed))\n",
+    "# Parallel Thread XGBoost and CV\n",
+    "start = time.time()\n",
+    "model = XGBClassifier(nthread=-1)\n",
+    "results = cross_val_score(model, X, label_encoded_y, cv=kfold, scoring='neg_log_loss',\n",
+    "    n_jobs=-1)\n",
+    "elapsed = time.time() - start\n",
+    "print(\"Parallel Thread XGBoost and CV: %f\" % (elapsed))"
+   ]
   }
  ],
  "metadata": {
