--- a/XGBoost-Tuning.ipynb
+++ b/XGBoost-Tuning.ipynb
@@ -80,12 +80,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tune the Number of Decision Trees"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##"
+    "\n",
+    "# XGBoost on Otto dataset, Tune n_estimators\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "n_estimators = range(50, 400, 50)\n",
+    "param_grid = dict(n_estimators=n_estimators)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold) \n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot\n",
+    "pyplot.errorbar(n_estimators, means, yerr=stds) \n",
+    "pyplot.title(\"XGBoost n_estimators vs Log Loss\")\n",
+    "pyplot.xlabel('n_estimators')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('n_estimators.png')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tune the Size of Decision Trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In gradient boosting, we can control the size of decision trees, also called the number of layers or the depth. Shallow trees are expected to have poor performance because they capture few details of the problem and are generally referred to as weak learners. Deeper trees generally capture too many details of the problem and overfit the training dataset, limiting the ability to make good predictions on new data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoost on Otto dataset, Tune max_depth\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "max_depth = range(1, 11, 2)\n",
+    "print(max_depth)\n",
+    "param_grid = dict(max_depth=max_depth)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold,\n",
+    "verbose=1)\n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_)) \n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot\n",
+    "pyplot.errorbar(max_depth, means, yerr=stds) \n",
+    "pyplot.title(\"XGBoost max_depth vs Log Loss\") \n",
+    "pyplot.xlabel('max_depth')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('max_depth.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tune The Number and Size of Trees"
    ]
   }
  ],
