--- a/XGBoost-Tuning.ipynb
+++ b/XGBoost-Tuning.ipynb
@@ -199,6 +199,66 @@
    "source": [
     "## Tune The Number and Size of Trees"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# XGBoost on Otto dataset, Tune n_estimators and max_depth\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "import numpy\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "n_estimators = [50, 100, 150, 200]\n",
+    "max_depth = [2, 4, 6, 8]\n",
+    "print(max_depth)\n",
+    "param_grid = dict(max_depth=max_depth, n_estimators=n_estimators)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold,\n",
+    "verbose=1)\n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_)) \n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot results\n",
+    "scores = numpy.array(means).reshape(len(max_depth), len(n_estimators))\n",
+    "for i, value in enumerate(max_depth):\n",
+    "  pyplot.plot(n_estimators, scores[i], label='depth: ' + str(value)) \n",
+    "pyplot.legend()\n",
+    "pyplot.xlabel('n_estimators')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('n_estimators_vs_max_depth.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tune Learning Rate and Number of Trees with XGBoost"
+   ]
   }
  ],
  "metadata": {
