--- a/XGBoost-Tuning.ipynb
+++ b/XGBoost-Tuning.ipynb
@@ -304,6 +304,197 @@
     "pyplot.ylabel('Log Loss') \n",
     "pyplot.savefig('learning_rate.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# XGBoost on Otto dataset, Tune learning_rate and n_estimators\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "import numpy\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "n_estimators = [100, 200, 300, 400, 500]\n",
+    "learning_rate = [0.0001, 0.001, 0.01, 0.1]\n",
+    "param_grid = dict(learning_rate=learning_rate, n_estimators=n_estimators)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold) \n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot results\n",
+    "scores = numpy.array(means).reshape(len(learning_rate), len(n_estimators))\n",
+    "for i, value in enumerate(learning_rate):\n",
+    "  pyplot.plot(n_estimators, scores[i], label='learning_rate: ' + str(value)) \n",
+    "pyplot.legend()\n",
+    "pyplot.xlabel('n_estimators')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuning Stochastic Gradient Boosting with XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# XGBoost on Otto dataset, tune subsample\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "subsample = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.0]\n",
+    "param_grid = dict(subsample=subsample)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold) \n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score'] \n",
+    "stds = grid_result.cv_results_['std_test_score'] \n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot\n",
+    "pyplot.errorbar(subsample, means, yerr=stds) \n",
+    "pyplot.title(\"XGBoost subsample vs Log Loss\") \n",
+    "pyplot.xlabel('subsample')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('subsample.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoost on Otto dataset, tune colsample_bytree\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "colsample_bytree = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.0]\n",
+    "param_grid = dict(colsample_bytree=colsample_bytree)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold) \n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot\n",
+    "pyplot.errorbar(colsample_bytree, means, yerr=stds) \n",
+    "pyplot.title(\"XGBoost colsample_bytree vs Log Loss\") \n",
+    "pyplot.xlabel('colsample_bytree')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('colsample_bytree.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoost on Otto dataset, tune colsample_bylevel\n",
+    "from pandas import read_csv\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import GridSearchCV \n",
+    "from sklearn.model_selection import StratifiedKFold \n",
+    "from sklearn.preprocessing import LabelEncoder \n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from matplotlib import pyplot\n",
+    "# load data\n",
+    "data = read_csv('train.csv')\n",
+    "dataset = data.values\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:94]\n",
+    "y = dataset[:,94]\n",
+    "# encode string class values as integers\n",
+    "label_encoded_y = LabelEncoder().fit_transform(y)\n",
+    "# grid search\n",
+    "model = XGBClassifier()\n",
+    "colsample_bylevel = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.0]\n",
+    "param_grid = dict(colsample_bylevel=colsample_bylevel)\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=7)\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"neg_log_loss\", n_jobs=-1, cv=kfold) \n",
+    "grid_result = grid_search.fit(X, label_encoded_y)\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "  print(\"%f (%f) with: %r\" % (mean, stdev, param))\n",
+    "# plot\n",
+    "pyplot.errorbar(colsample_bylevel, means, yerr=stds) \n",
+    "pyplot.title(\"XGBoost colsample_bylevel vs Log Loss\") \n",
+    "pyplot.xlabel('colsample_bylevel')\n",
+    "pyplot.ylabel('Log Loss') \n",
+    "pyplot.savefig('colsample_bylevel.png')"
+   ]
   }
  ],
  "metadata": {
